--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,9 +10,11 @@ configure_file(
 add_library(
   ${SCOPE_NAME}-static OBJECT
   youtube/api/channel.cpp
+  youtube/api/channel-section.cpp
   youtube/api/client.cpp
   youtube/api/guide-category.cpp
   youtube/api/playlist.cpp
+  youtube/api/playlist-item.cpp
   youtube/api/simple-oauth.cpp
   youtube/api/video.cpp
   youtube/api/video-category.cpp
