--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: cmake (>= 2.8.10),
                intltool,
                libaccounts-glib-dev,
                libboost1.55-dev,
+               libboost-iostreams1.55-dev,
                libglib2.0-dev,
                libjsoncpp-dev,
                libnet-cpp-dev,
