Searches now return semantic object, rather than std container

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(
   youtube/api/playlist.cpp
   youtube/api/playlist-item.cpp
   youtube/api/simple-oauth.cpp
+  youtube/api/search-list-response.cpp
   youtube/api/video.cpp
   youtube/api/video-category.cpp
   youtube/scope/preview.cpp
