--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,12 +1,12 @@
 
 configure_file(
   "${SCOPE_NAME}.ini.in"
-  "${CMAKE_CURRENT_BINARY_DIR}/${SCOPE_NAME}.ini"
+  "${CMAKE_CURRENT_BINARY_DIR}/${SCOPE_INSTALL_NAME}.ini"
   @ONLY
 )
 
 install(
-  FILES "${CMAKE_CURRENT_BINARY_DIR}/${SCOPE_NAME}.ini"
+  FILES "${CMAKE_CURRENT_BINARY_DIR}/${SCOPE_INSTALL_NAME}.ini"
   DESTINATION ${SCOPE_INSTALL_DIR}
 )
 
