--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,9 @@ Build-Depends: cmake (>= 2.8.10),
                intltool,
                libaccounts-glib-dev,
                libboost1.55-dev,
+               libboost-filesystem-dev,
                libboost-iostreams1.55-dev,
+               libboost-system-dev,
                libglib2.0-dev,
                libjsoncpp-dev,
                libnet-cpp-dev,
