Rename click packaged scope to com.ubuntu.youtube

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,10 +42,12 @@ include_directories(
 
 set(SCOPE_NAME unity-scope-youtube)
 if(CLICK_MODE)
-  add_subdirectory(click)
-  set(SCOPE_INSTALL_NAME "com.pete-woods.youtube_youtube")
+  set(SCOPE_PACKAGE "com.ubuntu.youtube")
+  set(SCOPE_INSTALL_NAME "${SCOPE_PACKAGE}_youtube")
   set(SCOPE_INSTALL_DIR "click/youtube")
+  add_subdirectory(click)
 else()
+  set(SCOPE_PACKAGE ${SCOPE_NAME})
   set(SCOPE_INSTALL_NAME ${SCOPE_NAME})
   _pkgconfig_invoke(libunity-scopes "SCOPE" "DIR" "" --variable=scopesdir)
   set(SCOPE_INSTALL_DIR "${SCOPE_DIR}/${SCOPE_NAME}")
