--- a/click/manifest.json.in
+++ b/click/manifest.json.in
@@ -1,5 +1,5 @@
 {
-    "description": "Youtube scope",
+    "description": "YouTube scope",
     "framework": "ubuntu-sdk-14.10-dev2",
     "architecture": "@CLICK_ARCH@",
     "hooks": {
@@ -11,6 +11,6 @@
     "icon": "icon",
     "maintainer": "Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>",
     "name": "@SCOPE_NAME@",
-    "title": "Youtube scope",
+    "title": "YouTube scope",
     "version": "1.0.2"
 }
