--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends: cmake (>= 2.8.10),
                libboost-iostreams1.55-dev,
                libglib2.0-dev,
                libjsoncpp-dev,
-               libnet-cpp-dev,
+               libnet-cpp-dev (>= 1.1.0),
                libprocess-cpp-dev,
                libsignon-glib-dev,
                libunity-scopes-dev (>= 0.6.0),
