Fix format of divider colour property

--- a/data/com.ubuntu.scopes.youtube.ini.in
+++ b/data/com.ubuntu.scopes.youtube.ini.in
@@ -7,5 +7,5 @@ Icon = icon.png
 
 [Appearance]
 PageHeader.Logo = logo.png
-PageHeader.DividerColor = color:///#b31217
+PageHeader.DividerColor = #b31217
 PageHeader.Background = color:///#ffffff
