Use the real location code

--- a/data/com.ubuntu.scopes.youtube.ini.in
+++ b/data/com.ubuntu.scopes.youtube.ini.in
@@ -4,6 +4,7 @@ Description = Search YouTube for videos and browse channels
 Art = screenshot.jpg
 Author = Canonical Ltd.
 Icon = icon.png
+LocationDataNeeded=true
 
 [Appearance]
 PageHeader.Logo = logo.png
