--- a/data/accounts/youtube.service
+++ b/data/accounts/youtube.service
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<provider id="youtube">
-  <name>Youtube</name>
-  <description>Connect your Youtube account</description>
+<service id="com.ubuntu.scopes.youtube_youtube">
+  <type>sharing</type>
   <icon>youtube</icon>
+  <name>YouTube</name>
+  <provider>google</provider>
   <translations>unity-scope-youtube</translations>
-  <domains>.*google\.com</domains>
-  <plugin>generic-oauth</plugin>
-
   <template>
     <group name="auth">
       <setting name="method">oauth2</setting>
@@ -27,4 +25,4 @@
       </group>
     </group>
   </template>
-</provider>
+</service>
