Moved accounts files to click folder

--- a/click/CMakeLists.txt
+++ b/click/CMakeLists.txt
@@ -9,6 +9,9 @@ install(
   FILES
     "${CMAKE_CURRENT_BINARY_DIR}/manifest.json"
     "apparmor.json"
+    "youtube.application"
+    "youtube.service"
+    "youtube.desktop"
   DESTINATION "click"
 )
 
