--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: unity-scope-youtube
 Section: x11
 Priority: optional
 Build-Depends: cmake (>= 2.8.10),
+Build-Depends: cmake-extras (>= 0.2),
                debhelper (>= 9),
                dh-translations,
                g++-4.9,
