Extract variables from service files

--- a/click/CMakeLists.txt
+++ b/click/CMakeLists.txt
@@ -1,16 +1,26 @@
 
-configure_file(
-  "manifest.json.in"
-  "${CMAKE_CURRENT_BINARY_DIR}/manifest.json"
-  @ONLY
+function(configure_scope_files)
+  foreach(_file ${ARGV})
+    configure_file(
+      "${_file}.in"
+      "${CMAKE_CURRENT_BINARY_DIR}/${_file}"
+      @ONLY
+    )
+  endforeach()
+endfunction()
+
+configure_scope_files(
+  manifest.json
+  youtube.service
+  youtube.application
 )
 
 install(
   FILES
     "${CMAKE_CURRENT_BINARY_DIR}/manifest.json"
     "apparmor.json"
-    "youtube.application"
-    "youtube.service"
+    "${CMAKE_CURRENT_BINARY_DIR}/youtube.service"
+    "${CMAKE_CURRENT_BINARY_DIR}/youtube.application"
     "youtube.desktop"
   DESTINATION ${CMAKE_INSTALL_PREFIX}
 )
