--- a/click/youtube.service.in
+++ b/click/youtube.service.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<service id="com.ubuntu.scopes.youtube_youtube">
+<service id="@SCOPE_INSTALL_NAME@">
   <type>sharing</type>
   <icon>youtube</icon>
   <name>YouTube</name>
