--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(
 
 add_definitions(
   -DFAKE_YOUTUBE_SERVER="${CMAKE_CURRENT_SOURCE_DIR}/server/server.py"
+  -DTEST_SCOPE_DIRECTORY="${CMAKE_BINARY_DIR}/src"
 )
 
 add_subdirectory(functional)
