Don't corrupt the PNG files on configure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,10 +6,12 @@ configure_file(
   "${CMAKE_CURRENT_BINARY_DIR}/${SCOPE_INSTALL_NAME}.ini"
   @ONLY
 )
+
 configure_file(
   "${CMAKE_SOURCE_DIR}/data/logo.png"
   "${CMAKE_CURRENT_BINARY_DIR}/logo.png"
   @ONLY
+  COPYONLY
 )
 
 add_library(
