--- a/click/youtube.application.in
+++ b/click/youtube.application.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<application id="@SCOPE_INSTALL_NAME@">
+<application>
   <description>YouTube</description>
   <desktop-entry>@SCOPE_INSTALL_NAME@.desktop</desktop-entry>
   <services>
