now when My Subscriptions department is being made, the net call to get my subscribed subscriptions is returned and printed. next step to build sub departs for each

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ configure_file(
 add_library(
   ${SCOPE_NAME}-static OBJECT
   youtube/api/channel.cpp
+  youtube/api/subscription.cpp
   youtube/api/channel-section.cpp
   youtube/api/client.cpp
   youtube/api/guide-category.cpp
