--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(
   ${SCOPE_NAME}-static OBJECT
   youtube/api/channel.cpp
   youtube/api/subscription.cpp
+  youtube/api/subscription-item.cpp
   youtube/api/channel-section.cpp
   youtube/api/client.cpp
   youtube/api/guide-category.cpp
