--- a/click/manifest.json.in
+++ b/click/manifest.json.in
@@ -1,6 +1,6 @@
 {
     "description": "YouTube scope",
-    "framework": "ubuntu-sdk-14.10-dev2",
+    "framework": "ubuntu-sdk-14.10",
     "architecture": "@CLICK_ARCH@",
     "hooks": {
         "youtube": {
