1. Show user info on surface 2. Support thumb up/ down 3  Retrieve comment list 4. Post a comment 5. Support to subscribe channel 6. Support to insert video into favorites and watch later list 7. Get specific channel video list and view channel statistics 8. Add my playlist department, which contains user's favorites, watch later, likes play list
added:
  include/youtube/api/comment.h
  include/youtube/api/user.h
  include/youtube/scope/activation.h
  po/ca.gmo
  po/da.gmo
  po/de.gmo
  po/en_GB.gmo
  po/es.gmo
  po/fr.gmo
  po/fur.gmo
  po/hu.gmo
  po/it.gmo
  po/pl.gmo
  po/pt.gmo
  po/ru.gmo
  po/sl.gmo
  src/youtube/api/comment.cpp
  src/youtube/api/user.cpp
  src/youtube/scope/activation.cpp
missing:
  CMakeLists.txt.user
  click/CMakeFiles
  click/CMakeFiles/CMakeDirectoryInformation.cmake
  click/CMakeFiles/progress.marks
  click/Makefile
  click/cmake_install.cmake
  click/manifest.json
  data/.directory
  data/CMakeFiles
  data/CMakeFiles/CMakeDirectoryInformation.cmake
  data/CMakeFiles/com.ubuntu.scopes.youtube_youtube.ini_2.dir
  data/CMakeFiles/com.ubuntu.scopes.youtube_youtube.ini_2.dir/DependInfo.cmake
  data/CMakeFiles/com.ubuntu.scopes.youtube_youtube.ini_2.dir/build.make
  data/CMakeFiles/com.ubuntu.scopes.youtube_youtube.ini_2.dir/cmake_clean.cmake
  data/CMakeFiles/com.ubuntu.scopes.youtube_youtube.ini_2.dir/depend.internal
  data/CMakeFiles/com.ubuntu.scopes.youtube_youtube.ini_2.dir/depend.make
  data/CMakeFiles/com.ubuntu.scopes.youtube_youtube.ini_2.dir/progress.make
  data/CMakeFiles/progress.marks
  data/Makefile
  data/cmake_install.cmake
  data/com.ubuntu.scopes.youtube_youtube.ini
  po/CMakeFiles
  po/CMakeFiles/CMakeDirectoryInformation.cmake
  po/CMakeFiles/progress.marks
  po/CMakeFiles/translations.dir
  po/CMakeFiles/translations.dir/DependInfo.cmake
  po/CMakeFiles/translations.dir/build.make
  po/CMakeFiles/translations.dir/cmake_clean.cmake
  po/CMakeFiles/translations.dir/progress.make
  po/CMakeFiles/translations_1.dir
  po/CMa

--- a/click/youtube.service.in
+++ b/click/youtube.service.in
@@ -17,7 +17,7 @@
           <setting name="TokenPath">o/oauth2/token</setting>
           <setting name="RedirectUri">https://wiki.ubuntu.com/</setting>
           <setting name="ResponseType">code</setting>
-          <setting type="as" name="Scope">['https://www.googleapis.com/auth/youtube.readonly']</setting>
+          <setting type="as" name="Scope">['https://www.googleapis.com/auth/youtube.force-ssl','https://www.googleapis.com/auth/youtube']</setting>
           <setting name="ClientId">368477111780-4tf0t65ol86nkvf6guksr8d1om0aebob.apps.googleusercontent.com</setting>
           <setting name="ClientSecret">bNfrMJzYmesl2sm1XutVnlmv</setting>
           <setting type="as" name="AllowedSchemes">['https','http']</setting>
